Fix align utilities wen uses with grid

--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -64,11 +64,15 @@
   display: flex;
 
   & > [class*="col-"] {
-    display: block;
+    display: inline-grid;
     flex: none;
     flex-basis: 0;
     flex-grow: 1;
     flex-shrink: 1;
+
+    &.full-height {
+      height: 100%;
+    }
   }
 }
 
